hw07 - updated versions, added javadocs, got rid of lombok, improved collections managing in domain entities