@@ -6,7 +6,6 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import ru.otus.erinary.hw07.springdatalibrary.model.Genre;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -71,7 +70,7 @@ class GenreRepositoryTest {
         assertEquals(3, genres.size());
         assertFalse(genres.get(0).getBooks().isEmpty());
 
-        var genreNames = genres.stream().map(Genre::getName).collect(Collectors.toList());
+        var genreNames = genres.stream().map(Genre::getName).toList();
         assertTrue(genreNames.containsAll(List.of("genre1", "genre2", "genre3")));
     }
 
@@ -84,7 +83,7 @@ class GenreRepositoryTest {
         repository.deleteById(1L);
         genres = repository.findAll();
         assertEquals(2, genres.size());
-        var genreIds = genres.stream().map(Genre::getId).collect(Collectors.toList());
+        var genreIds = genres.stream().map(Genre::getId).toList();
         assertFalse(genreIds.contains(1L));
     }
 }
